--- a/views/index.haml
+++ b/views/index.haml
@@ -13,7 +13,7 @@
       %a{:href => 'http://www.github.com/vinibaggio/outpost' } outpost gem
       to help you monitor your app(s), check it for more information.
     %p
-      For more information, check me at GitHub!
+      The source code for this demo is available, check me at GitHub!
       %a{:href => 'http://www.github.com/vinibaggio/outpost-web'} http://www.github.com/vinibaggio/outpost-web
 
     .statuses
